# ai_track

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  knowledges.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  doc-researcher.md  notebook-validator.md  python-linter.md
.claude/commands/: eval.md  orchestrate.md  plan.md  skill-create.md  tdd.md
.claude/contexts/: architecture.md  lab-conventions.md  models.md
.claude/hooks/: audit-log.sh  detect-secrets.sh  format-python.sh  load-env.sh  run-tests.sh  validate-notebook.sh
.claude/rules/: api-design.md  notebooks.md  python.md  security.md  testing.md
.claude/skills/commit/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/explain/: SKILL.md
.claude/skills/lab-status/: SKILL.md
.claude/skills/new-week/: SKILL.md
.claude/skills/review/: SKILL.md
agenda/: 00_summary.md  week_01.md  week_02.md  week_03.md  week_03_local_dev.md  week_04.md  week_05.md  week_06.md  week_07.md  week_08.md  week_09.md  week_10.md  week_11.md  week_12.md  week_13.md  week_14.md  week_15.md  week_16.md
labs/: week_00_getting_started.ipynb  week_01_first_api_call.ipynb  week_02_chatbot.ipynb  week_02_rag_intro.ipynb  week_03_embeddings.ipynb  week_03_local_dev.ipynb  week_03_structured_output.ipynb  week_04_production_rag.ipynb  week_04_rag_intro.ipynb  week_05_embeddings.ipynb  week_05_evaluations.ipynb  week_06_production_rag.ipynb  week_06_security.ipynb  week_07_agents.ipynb  week_07_evaluations.ipynb  week_08_security.ipynb  week_08_tool_calling.ipynb  week_09_frameworks.ipynb  week_09_tool_calling.ipynb  week_10_agents.ipynb  week_10_frameworks_observability.ipynb  week_11_data_engineering.ipynb  week_11_frameworks.ipynb  week_12_data_engineering.ipynb  week_12_mcp.ipynb  week_13_mcp.ipynb  week_13_production.ipynb  week_14_deployment.ipynb  week_14_production.ipynb  week_15_capstone.ipynb  week_15_deployment.ipynb  week_16_capstone.ipynb
projects/01_rag_qa_system/: README.md
projects/02_ai_agent/: README.md
projects/03_capstone/: README.md
scripts/: add_solutions.py  model_config.py
