[project]
name = "ai-track"
version = "0.1.0"
description = "AI Engineering Track v2 — 16-week curriculum"
requires-python = ">=3.11"
dependencies = [
    # Core LLM APIs
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",

    # Environment & Config
    "python-dotenv>=1.0.0",

    # Data Validation
    "pydantic>=2.0.0",

    # Vector Databases
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",

    # LangChain / LangGraph (Weeks 9-11)
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",

    # Langfuse observability (Week 10)
    "langfuse>=2.0.0",

    # Web & API (Week 15)
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",

    # Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Jupyter Labs
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",

    # Testing
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
